# Toy-Social-Network-Back-End-only-

./: CMakeLists.txt  main.cpp
Domain/: Event.h  Friendship.cpp  Friendship.h  Message.cpp  Message.h  Network.cpp  Network.h  User.cpp  User.h
Domain/Dictionary/: Dictionary.h  DictionaryNode.h
Domain/List/: List.h  ListNode.h  Node.h
Domain/TXT/: Friendships.txt  Messages.txt  Users.txt
Repository/: EventRepository.h  FriendshipRepository.h  MesssageRepository.h  UserRepository.h
Service/: EventService.cpp  EventService.h  FriendshipService.cpp  FriendshipService.h  MessageService.cpp  MessageService.h  UserService.cpp  UserService.h
Tests/: Tests.cpp  Tests.h
UI/: MainMenu.cpp  MainMenu.h
